# iot_mqtt_server

./: .env.example  .gitignore  Cargo.toml  README.md  global.d.ts  package.json  tsconfig.tsbuildinfo
app/: layout.tsx  page.tsx
app/api/auth/csrf/: route.ts
app/api/auth/signin/: route.ts
app/api/auth/signup/: route.ts
app/api/current/: route.ts
app/api/historical/: route.ts
app/api/mqtt/: route.ts
app/api/websocket/: route.ts
components/charts/: historical-chart.tsx
components/dashboard/: dashboard-layout.tsx  sensor-cards.tsx  websocket-provider.tsx
lib/: data-service.ts  mqtt-client.ts  types.ts
migrations/: 0001_init.sql
prisma/: schema.prisma
scripts/: seed.ts
src/: api.rs  config.rs  db.rs  main.rs  mqtt.rs  web.rs
static/: app.js  index.html  style.css
